Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8063556 | 8u45 | Mikael Gerdin | P4 | Resolved | Fixed | b01 |
JDK-8049569 | 8u40 | Stefan Karlsson | P4 | Resolved | Fixed | b02 |
JDK-8070836 | emb-8u47 | Mikael Gerdin | P4 | Resolved | Fixed | team |
As part of a larger effort to detach G1's HeapRegion from ContiguousSpace
G1 needs to stop using the special version of DirtyCardToOopClosure.
This also makes the code more easy to follow since G1 never actually
relies on the functionality from Filtering_DCTOC and ContiguousSpaceDCTOC.
G1 needs to stop using the special version of DirtyCardToOopClosure.
This also makes the code more easy to follow since G1 never actually
relies on the functionality from Filtering_DCTOC and ContiguousSpaceDCTOC.
- backported by
-
JDK-8049569 G1 HeapRegionDCTOC does not need to inherit ContiguousSpaceDCTOC
-
- Resolved
-
-
JDK-8063556 G1 HeapRegionDCTOC does not need to inherit ContiguousSpaceDCTOC
-
- Resolved
-
-
JDK-8070836 G1 HeapRegionDCTOC does not need to inherit ContiguousSpaceDCTOC
-
- Resolved
-
- relates to
-
JDK-8047818 G1 HeapRegions can no longer be ContiguousSpaces
-
- Resolved
-