8047819: G1 HeapRegionDCTOC does not need to inherit ContiguousSpaceDCTOC

Reviewed-by: stefank, tschatzl